Refactor e ottimizzazione responsività Area Privata e Account: aggiornamento header, layout dashboard e stili CSS Titanium V3.0

--- a/Frontend/public/assets/components/header.html
+++ b/Frontend/public/assets/components/header.html
@@ -1,3 +1,12 @@
 <header class="titanium-header">
-    <div id="header-content"></div>
+    <div id="header-content" class="header-balanced-container">
+        <!-- ZONA SINISTRA: Navigazione / Profilo -->
+        <div id="header-left" class="header-left"></div>
+
+        <!-- ZONA CENTRO: Titolo / Saluto -->
+        <div id="header-center" class="header-center"></div>
+
+        <!-- ZONA DESTRA: Azioni / Logout -->
+        <div id="header-right" class="header-right"></div>
+    </div>
 </header>
